istio-and-k8s/opa/istio-ingress-opa/ingress-use-opa-as-custom-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-opa
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: "opa.default"
  rules:
    - to:
        - operation:
            paths: ["/bonus-booklets/*"]
