istio-and-k8s/opa/istio-ingress-opa/policy-allow-communication-with-opa-ingress.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "opa-ingress-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: opa
  action: ALLOW
  rules:
    - {} # allows traffic go to opa service
